# MarkNote

./: README.md  com.github.MarkNote.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.github.MarkNote.json/: init
.flatpak-builder/checksums/: x86_64-com.github.MarkNote.json
data/: com.github.MarkNote.appdata.xml.in  com.github.MarkNote.desktop.in  com.github.MarkNote.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  marknote-application.c  marknote-application.h  marknote-editor-window.c  marknote-editor-window.h  marknote-file-list.c  marknote-file-list.h  marknote-types.h  marknote-window.c  marknote-window.h  marknote-window.ui  marknote.gresource.xml  meson.build  style.css
src/gtk/: help-overlay.ui
src/ui/: help-overlay.ui  marknote-editor-window.ui  marknote-main-window.ui
